static/css/resume.css
/**
 * Page-wide rules
 */

a {
  color: #000;
  text-decoration: none;
}

a:hover, a:focus, a:active {
  color: #069;
  outline: 0;
  text-decoration: underline;
}

a .fa-external-link {
  padding-left: 4px;
}

ul {
  margin-top: 0;
  margin-bottom: 0;
}

.hidden {
  display: none !important;
}

#resume {
  font-family: Helvetica, Arial, "Liberation Sans", FreeSans, sans-serif;
  font-size: 14px;
  min-width: 800px;
}

/**
 * Rules for the page header
 */

.pageHeader {
  padding: 20px;
  border-bottom: 1px solid #ddd;
  box-shadow: 1px 1px 3px #ddd;
}

.pdfLink {
  float: right;
}

.pdfLink .fa {
  padding-right: 3px;
}

.pageTitle {
  font: 48px "Alegreya SC", Georgia, "Times New Roman", Times, serif;
  font-weight: bold;
  text-align: center;
  margin-bottom: 5px;
}

.contactMethods {
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 50px;
}

.contactMethod {
  min-width: 300px;
  font-size: 16px;
  text-align: center;
}

/**
 * General rules for sections
 */

.content {
  max-width: 1120px;
  margin: 0 auto 20px;
}

.section {
  padding: 15px 40px 0;
}

.section:not(:last-child):after {
  display: block;
  content: "";
  height: 1px;
  background: -moz-gradient(radial, 50% 50%, 50, 50% 50%, 500, from(#ccc), to(#f9f9f9));
  background: -webkit-gradient(radial, 50% 50%, 50, 50% 50%, 500, from(#ccc), to(#f9f9f9));
  background: gradient(radial, 50% 50%, 50, 50% 50%, 500, from(#ccc), to(#f9f9f9));
  margin-top: 15px;
}

.sectionTitle {
  font: 20px "Alegreya SC", Georgia, "Times New Roman", Times, serif;
  color: #007ebd;
  margin-bottom: 5px;
}

.subsection {
  padding: 6px 10px;
}

.subsectionHeader {
  display: -webkit-flex;
  display: flex;
  margin-bottom: 4px;
}

.subsectionTitle {
  font-size: 14px;
  font-weight: bold;
}

.subsectionHeader .titleSeparator {
  font-weight: bold;
  margin-left: 3px;
  margin-right: 3px;
}

.subsectionHeader .timeRange {
  -webkit-flex: 1;
  flex: 1;
  color: #aaa;
  text-align: right;
}

.description li {
  line-height: 1.5;
}

.description .skills,
.description .skills .skill {
  display: inline;
  margin: 0;
  padding: 0;
  list-style: none;
}

.content:not(.unhighlightable) .jobs.section .job:hover,
.jobs.section .job.highlight,
.content:not(.unhighlightable) .projects.section .project:hover,
.projects.section .project.highlight {
  background-color: #ebf8ff;
}

.skills.section .skill:hover,
.skills.section .skill.highlight {
  background-color: #cef;
}

/**
 * Skills section
 */

.skills.section {
  padding-top: 15px;
}

.skills.section.affixed {
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #fafdff;
  padding-bottom: 10px;
  border-bottom: 1px solid #ddd;
  box-shadow: 1px 1px 3px #ddd;
  z-index: 1;
}

.skills.section .sectionHeader {
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: flex-start;
  align-items: flex-start;
}

.skills.section .sectionHeader .sectionTitle {
  -webkit-flex: 1;
  flex: 1;
}

.skills.section .sectionHeader .resumeOptions label {
  opacity: 0.6;
  margin-left: 10px;
}

.skills.section .sectionHeader .resumeOptions label:hover,
.skills.section .sectionHeader .resumeOptions label:focus {
  opacity: 1;
}

.skills.section .categorySkills {
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: flex-start;
  align-items: flex-start;
  padding-top: 0;
  padding-bottom: 0;
}

.skills.section .categorySkills .subsectionTitle {
  -webkit-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 60px;
  position: relative;
  top: 10px;
}

.skills.section .categorySkills ul {
  list-style: none;
}

.skills.section .categorySkills .skill {
  display: inline-block;
  border-radius: 5px;
  margin: 4px 2px;
  padding: 5px;
  border: 1px solid #ddd;
}

/**
 * Jobs section
 */

.jobs.section .subsectionHeader {
  margin-bottom: 4px;
}

.jobs.section .org img {
  margin-top: -4px;
  width: 15px;
  vertical-align: middle;
}

.jobs.section .org.twitter img {
  margin-right: -4px;
  width: 23px;
}

.jobs.section .title {
  font-style: italic;
}

/**
 * Projects section
 */

.projects.section .subsectionHeader {
  margin-bottom: 10px;
}

.projects.section .details {
  display: -webkit-flex;
  display: flex;
}

.projects.section .details .screenshot {
  -webkit-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 40%;
  max-width: 500px;
}

.projects.section .details .screenshot img {
  max-width: 100%;
  padding: 2px;
  border: 1px solid #ddd;
}


/**
 * Education section
 */

.educations.section .subsectionHeader {
  margin-bottom: 4px;
}

/**
 * Awards section
 */

.awards.section .subsectionHeader {
  margin-bottom: 0;
 }

 /**
  * Last update date footer
  */
.updatedDateContainer {
  text-align: right;
  color: #aaa;
  padding: 20px;
  font-style: italic;
}

